--- a/devinmajordotcom/Views/Web.config
+++ b/devinmajordotcom/Views/Web.config
@@ -17,6 +17,10 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
+        <add namespace="Chart.Mvc" />
+        <add namespace="Chart.Mvc.ComplexChart" />
+        <add namespace="Chart.Mvc.SimpleChart" />
+        <add namespace="Chart.Mvc.Extensions"/>
         <add namespace="devinmajordotcom" />
       </namespaces>
     </pages>
