--- a/devinmajordotcom/packages.config
+++ b/devinmajordotcom/packages.config
@@ -52,6 +52,7 @@
   <package id="Ninject.Web.Common" version="3.3.1" targetFramework="net461" />
   <package id="Ninject.Web.Common.WebHost" version="3.3.1" targetFramework="net461" />
   <package id="Node.js" version="5.3.0" targetFramework="net45" />
+  <package id="NuGet.CommandLine" version="4.4.1" targetFramework="net461" developmentDependency="true" />
   <package id="OpenHardwareMonitor" version="0.7.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="popper.js" version="1.14.3" targetFramework="net461" />
